# pricing-lab

./: .env.example  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CITATION.cff  DEPLOYMENT.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
docs/: API.md  DEVELOPMENT.md  EVALUATION_REPORT.md  USAGE.md  architecture.md  openapi.json  research_questions.md
docs/results/: phase1_naive_ab.json  phase1_naive_ab.md  phase2_regression_adjusted.json  phase2_regression_adjusted.md  phase2_switchback_vs_naive.json  phase2_switchback_vs_naive.md  phase2c_randomization_inference.json  phase2c_randomization_inference.md  phase3_block_size.json  phase3_block_size.md  phase3b_stratified_switchback.json  phase3b_stratified_switchback.md  phase4_dml.json  phase4_dml.md  phase5_hetero.json  phase5_hetero.md  phase6_realdata.json  phase6_realdata.md
hf_space/: README.md  app.py  requirements.txt
scripts/: run_phase1_naive_ab.py  run_phase2_regression_adjusted.py  run_phase2_switchback_compare.py  run_phase2c_randomization_inference.py  run_phase3_block_size.py  run_phase3b_stratified_switchback.py  run_phase4_dml.py  run_phase5_hetero.py  run_phase6_realdata.py  run_pricing_smoke.py
src/pricelab/: __init__.py  realdata.py
src/pricelab/api/: main.py
src/pricelab/estimators/: __init__.py  ate.py  dml.py  randomization.py
src/pricelab/evaluation/: __init__.py  compare.py
tests/: test_dashboard.py  test_estimators.py  test_imports.py  test_phase456.py  test_randomization.py  test_simulation.py
(+2 files in other folders)
